--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 beautifulsoup4==4.4.1
+cycler==0.9.0
+matplotlib==1.5.0
 numpy==1.10.1
 pymongo==3.1
+pyparsing==2.0.6
+python-dateutil==2.4.2
+pytz==2015.7
+scikit-learn==0.17
+scipy==0.16.1
+six==1.10.0
+sklearn==0.0
 wheel==0.24.0
